--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
     </div>
 
     <p class="email">メール: senpainet.iss@gmail.com</p>
+
+    <p style="font-size: 0.75rem; color: #64748b; line-height: 1.6;">
+      ※SenpaiNetは、東京学芸大学附属中等教育学校（TGUISS）の<br class="pc-only">
+      卒業生有志により運営される独立した非公式団体です。<br class="pc-only">
+      学校当局とは一切関係ございません。
+    </p>
+    
   </div>
 
   <div class="hero-right slide-right">
@@ -111,7 +118,7 @@
 
 
     <!-- Contact -->
-    <section id="contact" class="section section-light">
+<section id="contact" class="section section-light">
       <div class="container">
         <h2>お問い合わせ</h2>
 
@@ -127,11 +134,25 @@
       </div>
     </section>
 
-  
-<footer>
+<footer style="background-color: #1e293b; color: #f8fafc; padding: 40px 20px; text-align: center; margin-top: 0;">
+  <div class="container" style="max-width: 800px; margin: 0 auto;">
+    
+    <div style="border: 1px solid #475569; padding: 20px; border-radius: 8px; background-color: #0f172a; margin-bottom: 20px;">
+      <p style="color: #fbbf24; font-weight: bold; margin-bottom: 10px; font-size: 0.9rem;">⚠️ 免責事項</p>
+      <p style="font-size: 0.85rem; line-height: 1.8; margin: 0; color: #cbd5e1;">
+        SenpaiNetは、東京学芸大学附属中等教育学校（TGUISS）の卒業生有志により運営される独立した非公式団体です。<br>
+        学校当局および公式サイトとは一切関係ございません。
+      </p>
+    </div>
+
+    <p style="font-size: 0.8rem; color: #94a3b8;">&copy; 2026 SenpaiNet</p>
+  </div>
+</footer>
+
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
