--- a/index.html
+++ b/index.html
@@ -134,24 +134,32 @@
       </div>
     </section>
 
-<footer style="background-color: #1e293b; color: #f8fafc; padding: 40px 20px; text-align: center; margin-top: 0;">
-  <div class="container" style="max-width: 800px; margin: 0 auto;">
-    
-    <div style="border: 1px solid #475569; padding: 20px; border-radius: 8px; background-color: #0f172a; margin-bottom: 20px;">
-      <p style="color: #fbbf24; font-weight: bold; margin-bottom: 10px; font-size: 0.9rem;">⚠️ 免責事項</p>
-      <p style="font-size: 0.85rem; line-height: 1.8; margin: 0; color: #cbd5e1;">
-        SenpaiNetは、東京学芸大学附属中等教育学校（TGUISS）の卒業生有志により運営される独立した非公式団体です。<br>
-        学校当局および公式サイトとは一切関係ございません。
-      </p>
+<footer style="background-color: #1e293b; color: #f8fafc; padding: 40px 20px; font-size: 0.9rem;">
+  <div class="container" style="max-width: 800px; margin: 0 auto; text-align: center;">
+
+    <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-bottom: 30px;">
+      <a href="privacy.html" style="color: #cbd5e1; text-decoration: none; transition: color 0.3s;">プライバシーポリシー</a>
+      <span style="color: #475569;">|</span>
+      <a href="terms.html" style="color: #cbd5e1; text-decoration: none; transition: color 0.3s;">利用規約</a>
+      <span style="color: #475569;">|</span>
+      <a href="contact.html" style="color: #cbd5e1; text-decoration: none; transition: color 0.3s;">お問い合わせ</a>
     </div>
 
-    <p style="font-size: 0.8rem; color: #94a3b8;">&copy; 2026 SenpaiNet</p>
+    <div style="border-top: 1px solid #334155; padding-top: 20px; margin-bottom: 20px;">
+       <p style="font-size: 0.75rem; color: #64748b; line-height: 1.6; margin: 0;">
+         ※SenpaiNetは、東京学芸大学附属中等教育学校（TGUISS）の卒業生有志により運営される独立した非公式団体です。<br>
+         学校当局および公式サイトとは一切関係ございません。
+       </p>
+    </div>
+
+    <p style="font-size: 0.75rem; color: #94a3b8; margin: 0;">&copy; 2026 SenpaiNet</p>
   </div>
 </footer>
 
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
