--- a/index.html
+++ b/index.html
@@ -156,9 +156,12 @@
   </div>
 </footer>
 
+<script type="module" src="firebase.js"></script>
+<script type="module" src="auth_header.js"></script>  
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
