--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
   <div class="navbar-container">
     <div class="navbar-logo">SenpaiNet</div>
 
-    <nav class="navbar-menu">
-     
+    <nav class="navbar-links">
       <a href="post.html">相談する</a>
       <a href="archive.html">相談を見る</a>
       <a href="senpai.html">先輩一覧</a>
       <a href="contact.html">お問い合わせ</a>
-      <a href="signup.html" class="account-btn">👤 アカウント</a>
     </nav>
+
+    <div class="navbar-auth">
+      <a href="signup.html" class="account-btn">👤 アカウント</a>
+    </div>
   </div>
 </header>
 
@@ -161,6 +163,7 @@
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
