--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <header class="navbar fade-down">
   <div class="navbar-container">
-    <div class="navbar-logo">SenpaiNet</div>
+    <div class="navbar-logo">
+      <a href="index.html">SenpaiNet</a>
+    </div>
 
     <nav class="navbar-links">
       <a href="post.html">相談する</a>
@@ -163,6 +165,7 @@
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
