--- a/archive.html
+++ b/archive.html
@@ -75,19 +75,24 @@
 </head>
 <body class="list-page">
 
-  <header class="navbar">
-    <div class="navbar-container">
-      <div class="navbar-logo"><a href="index.html">SenpaiNet</a></div>
-      <nav class="navbar-menu">
-        <a href="post.html">相談する</a>
-        <a href="archive.html">相談を見る</a>
-        <a href="senpai.html">先輩一覧</a>
-        <a href="form.html">お問い合わせ</a>
-        <a href="#" class="account-btn">ログイン</a>  
-      </nav>
+ <header class="navbar fade-down">
+  <div class="navbar-container">
+    <div class="navbar-logo">
+      <a href="index.html">SenpaiNet</a>
     </div>
-  </header>
 
+    <nav class="navbar-links">
+      <a href="post.html">相談する</a>
+      <a href="archive.html">相談を見る</a>
+      <a href="senpai.html">先輩一覧</a>
+      <a href="contact.html">お問い合わせ</a>
+    </nav>
+
+    <div class="navbar-auth">
+      <a href="signup.html" class="account-btn">👤 アカウント</a>
+    </div>
+  </div>
+</header>
   <div class="breadcrumbs">
       <a href="index.html">TOP</a> <span>&gt;</span> 相談一覧
   </div>
@@ -156,3 +161,4 @@
   <script type="module" src="archive.js"></script>
 </body>
 </html>
+
