--- a/senpai.html
+++ b/senpai.html
@@ -51,18 +51,24 @@
 </head>
 <body class="list-page">
 
-  <header class="navbar">
-    <div class="navbar-container">
-      <div class="navbar-logo"><a href="index.html">SenpaiNet</a></div>
-      <nav class="navbar-menu">
-        <a href="post.html">相談する</a>
-        <a href="archive.html">相談を見る</a>
-        <a href="senpai.html" class="active" style="color:#2563eb;">先輩一覧</a>
-        <a href="form.html">お問い合わせ</a>
-        <a href="#" class="account-btn">ログイン</a>
-      </nav>
+ <header class="navbar fade-down">
+  <div class="navbar-container">
+    <div class="navbar-logo">
+      <a href="index.html">SenpaiNet</a>
     </div>
-  </header>
+
+    <nav class="navbar-links">
+      <a href="post.html">相談する</a>
+      <a href="archive.html">相談を見る</a>
+      <a href="senpai.html">先輩一覧</a>
+      <a href="contact.html">お問い合わせ</a>
+    </nav>
+
+    <div class="navbar-auth">
+      <a href="signup.html" class="account-btn">👤 アカウント</a>
+    </div>
+  </div>
+</header>
 
   <main>
     <section class="header">
