--- a/senpai.html
+++ b/senpai.html
@@ -5,6 +5,7 @@
   <title>先輩ポートフォリオ | SenpaiNet</title>
   <link rel="stylesheet" href="archive.css">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     /* 追加ボタンエリア */
     .header-actions { text-align: center; margin-bottom: 30px; }
