--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,7 @@
   <title>投稿一覧 | SenpaiNet</title>
   <link rel="stylesheet" href="archive.css">
   <link rel="stylesheet" href="style.css">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     /* 既存のグリッドスタイル維持 */
     #postList {
@@ -161,4 +161,5 @@
   <script type="module" src="archive.js"></script>
 </body>
 </html>
+
 
