--- a/senpai.html
+++ b/senpai.html
@@ -52,22 +52,19 @@
 </head>
 <body class="list-page">
 
- <header class="navbar fade-down">
+<header class="navbar fade-down">
   <div class="navbar-container">
     <div class="navbar-logo">
       <a href="index.html">SenpaiNet</a>
     </div>
 
-    <nav class="navbar-links">
+    <nav class="navbar-menu">
       <a href="post.html">相談する</a>
       <a href="archive.html">相談を見る</a>
       <a href="senpai.html">先輩一覧</a>
       <a href="contact.html">お問い合わせ</a>
-    </nav>
-
-    <div class="navbar-auth">
       <a href="signup.html" class="account-btn">👤 アカウント</a>
-    </div>
+    </nav>
   </div>
 </header>
 
