--- a/post.html
+++ b/post.html
@@ -158,7 +158,7 @@
                 <li>卒業生の回答は必ずしも正しいとは限りません。ご了承ください。</li>
             </ul>
         </div>
-        <button type="submit" class="submit-btn">🚀 投稿する</button>
+        <button type="submit" class="submit-btn"> 投稿する</button>
       </form>
       <a href="archive.html" class="back-link">← 一覧に戻る</a>
     </div>
@@ -168,3 +168,4 @@
 <script type="module" src="post.js"></script>
 </body>
 </html>
+
