--- a/profile.html
+++ b/profile.html
@@ -268,7 +268,7 @@
           <div class="current-tags" id="dispTags"></div>
       </div>
       <div class="edit-mode-area" id="tagsEditArea">
-          <p style="margin-bottom:15px; color:#666;">最大3つまで選択できます。</p>
+          <p style="margin-bottom:15px; color:#666;">最大10個まで選択できます。</p>
           <div class="selection-container" id="tagSelectionContainer">
             <span class="tag-option" data-tag="一般入試">#一般入試</span>
             <span class="tag-option" data-tag="AO入試">#AO入試</span>
@@ -338,3 +338,4 @@
   <script type="module" src="profile.js"></script>
 </body>
 </html>
+
