--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p class="email">メール: senpainet.iss@gmail.com</p>
 
     <p style="font-size: 0.75rem; color: #64748b; line-height: 1.6;">
-      ※SenpaiNetは、東京学芸大学附属中等教育学校（TGUISS）の<br class="pc-only">
+      ※SenpaiNetは、東京学芸大学附属国際中等教育学校（TGUISS）の<br class="pc-only">
       卒業生有志により運営される独立した非公式団体です。<br class="pc-only">
       学校当局とは一切関係ございません。
     </p>
@@ -162,6 +162,7 @@
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
