--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <div style="border-top: 1px solid #334155; padding-top: 20px; margin-bottom: 20px;">
        <p style="font-size: 0.75rem; color: #64748b; line-height: 1.6; margin: 0;">
-         ※SenpaiNetは、東京学芸大学附属中等教育学校（TGUISS）の卒業生有志により運営される独立した非公式団体です。<br>
+         ※SenpaiNetは、東京学芸大学附属国際中等教育学校（TGUISS）の卒業生有志により運営される独立した非公式団体です。<br>
          学校当局および公式サイトとは一切関係ございません。
        </p>
     </div>
@@ -162,6 +162,7 @@
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
