--- a/contact.html
+++ b/contact.html
@@ -28,32 +28,40 @@
         </nav>
       </div>
     </header>
-    <section id="contact">
-        <h2>お問い合わせ</h2>
-        <form id="contact-form">
-            <div class="field">
-                <label for="email">メールアドレス</label>
-                <input type="email" id="email" placeholder="example@mail.com" required>
-            </div>
 
-            <div class="field">
-                <label for="category">お問い合わせ内容の選択</label>
-                <select id="category" required>
-                    <option value="">選択してください</option>
-                    <option value="service">サービスについて</option>
-                    <option value="collaboration">コラボレーションのご提案</option>
-                    <option value="other">その他</option>
-                </select>
-            </div>
+    <section class="contact-section">
+        <div class="contact-container">
+            <h2 class="section-title">お問い合わせ</h2>
+            <p class="section-description">
+                ご質問やご提案がありましたら、お気軽にお送りください。
+            </p>
 
-            <div class="field">
-                <label for="message">具体的な内容</label>
-                <textarea id="message" rows="5" placeholder="こちらにご記入ください" required></textarea>
-            </div>
+            <form id="contact-form">
+                <div class="form-group">
+                    <label for="email">メールアドレス <span class="required">*</span></label>
+                    <input type="email" id="email" class="form-control" placeholder="example@mail.com" required>
+                </div>
 
-            <button type="submit" id="submit-btn">送信する</button>
-        </form>
-        <div id="form-status"></div>
+                <div class="form-group">
+                    <label for="category">お問い合わせ内容 <span class="required">*</span></label>
+                    <select id="category" class="form-control form-select" required>
+                        <option value="">選択してください</option>
+                        <option value="service">サービスについて</option>
+                        <option value="collaboration">コラボレーションのご提案</option>
+                        <option value="other">その他</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="message">具体的な内容 <span class="required">*</span></label>
+                    <textarea id="message" class="form-control" rows="5" placeholder="こちらにご記入ください" required></textarea>
+                </div>
+
+                <button type="submit" id="submit-btn" class="submit-btn">送信する</button>
+            </form>
+            
+            <div id="form-status" class="form-status"></div>
+        </div>
     </section>
 
     <script type="module" src="firebase.js"></script>
